# rusty_regx

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  fuzz-deep.yml  publish.yml
benches/: compare.rs
docs/: COOKBOOK.md  FLAVORS.md  GLOB_DESIGN.md  LOOKAROUND.md
examples/: grep.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential.rs  exec.rs  parse.rs
src/: ast.rs  bracket.rs  compile.rs  error.rs  glob.rs  lib.rs  parser.rs  vm.rs
tests/: cookbook.rs  differential.rs  glob_differential.rs  lookaround.rs  matching.rs
