[package]
name = "rusty_regx"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "A minimal, linear-time POSIX-ERE regex engine with no dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baileyrd/rusty_regx"
readme = "README.md"
keywords = ["regex", "posix", "ere"]
categories = ["text-processing"]

[dependencies]
# Intentionally empty: zero runtime dependencies is a core goal.

[dev-dependencies]
# Dev-only: the reference implementation for the differential harness
# (tests/differential.rs) and the benchmarks. Never a runtime dependency.
regex = "1"

[[bench]]
name = "compare"
harness = false
