[package]
name = "rusty_regx"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "A minimal, linear-time POSIX-ERE regex engine with no dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baileyrd/rusty_regx"
readme = "README.md"
keywords = ["regex", "posix", "ere"]
categories = ["text-processing"]

[dependencies]
# Intentionally empty: zero runtime dependencies is a core goal.

[dev-dependencies]
# Dev-only: the reference implementation for the differential harness
# (tests/differential.rs) and the benchmarks. Never a runtime dependency.
regex = "1"

[[bench]]
name = "compare"
harness = false

# Applies to `cargo bench`/`cargo run --example` in this repo and to anyone
# building this crate as the top-level package; Cargo ignores a
# dependency's own [profile.*], so this has no effect on rush or other
# downstream consumers building it as a library dependency.
[profile.release]
lto = true
codegen-units = 1
