[package]
name = "rusty_regx-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# The reference implementation for the differential target; like the test
# harness, never a runtime dependency of the crate itself.
regex = "1"

[dependencies.rusty_regx]
path = ".."

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "exec"
path = "fuzz_targets/exec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
bench = false
